# projeto_api

./: pyproject.toml  render.yaml
backend/: crud.py  database.py  models.py  router.py  schemas.py
