[tool.poetry]
name = "projeto-api"
version = "0.1.0"
description = ""
authors = ["Guilherme Canfield <guilherme.canfield87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
pydantic = {extras = ["email"], version = "^2.8.2"}
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
